card spacing fix

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -182,9 +182,11 @@ header {
   box-shadow: 2px 3px 1px 0px #d6d6d6;
   margin-bottom: 20px;
   margin-left: 100px;
+  margin-top: 20px;
   /*display: block;*/
   padding: 10px;
   width: 18rem;
+  min-width: 18rem;
   max-width: 18rem;
 }
 
